<resources>
    <string name="app_name">Entire XKCD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="favs">favs</string>
    <string name="update">update</string>
    <string name="settings">settings</string>
    <string name="no_filter">notify of new comics</string>
    <string name="notifications_on">notifications on</string>
    <string name="notifications_off">notifications off</string>
    <string name="refresh">refresh</string>
</resources>