<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/update"
        android:icon="@drawable/reload"
        android:title="@string/update"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/fav"
        android:icon="@drawable/grey_border_heart"
        android:title="@string/favs"
        app:showAsAction="always" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/notifications_on_white_24"
        android:title="@string/settings"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/notification_on"
                android:icon="@drawable/notifications_24"
                android:title="@string/notifications_on"
                app:showAsAction="never">

            </item>

            <item
                android:id="@+id/notification_off"
                android:icon="@drawable/notifications_off_24"
                android:title="@string/notifications_off"
                app:showAsAction="never">

            </item>

        </menu>
    </item>
</menu>


